# slack-notifications-python

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
SlackNotifications/: _version.py  exceptions.py  slack.py
tests/: test_slack.py
